<resources>
    <string name="app_name">Coronavirus Tracking App</string>
    <string name="label" translatable="false">Label</string>
    <string name="value" translatable="false">Value</string>
    <string name="overview">Overview</string>
    <string name="countries">Countries</string>
    <string name="pie_chart">Pie chart</string>
    <string name="line_chart">Line chart</string>
    <string name="confirmed">Confirmed</string>
    <string name="dead">Dead</string>
    <string name="recovered">Recovered</string>
    <string name="last_update">Last update</string>
    <string name="country">Country</string>
    <string name="country_search_hint">Search a country</string>
    <string name="error_try_again">An error occurred, please try again.</string>
</resources>
