<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/screen_background_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/flag"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@null"
                    android:src="@drawable/br"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/countryName"
                    style="@style/OverviewTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/flag"
                    tools:text="Brazil" />

                <TextView
                    android:id="@+id/latestUpdateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/rubik_italic"
                    android:text="@string/last_update"
                    android:textColor="@color/last_update_label_color"
                    app:layout_constraintStart_toStartOf="@+id/countryName"
                    app:layout_constraintTop_toBottomOf="@+id/countryName" />

                <TextView
                    android:id="@+id/latestUpdateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/rubik_medium"
                    android:textAllCaps="true"
                    android:textColor="@color/slate_grey_100"
                    app:layout_constraintStart_toEndOf="@+id/latestUpdateLabel"
                    app:layout_constraintTop_toTopOf="@+id/latestUpdateLabel"
                    tools:text="Mar 15th" />

                <com.marlonmafra.coronavirustrackingapp.ui.OverviewView
                    android:id="@+id/localConfirmedView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:label="@string/confirmed"
                    app:labelTextColor="@color/slate_grey_100"
                    app:layout_constraintEnd_toStartOf="@+id/localDeadView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/latestUpdateLabel"
                    app:valueTextColor="@color/orange"
                    tools:value="222.333" />

                <com.marlonmafra.coronavirustrackingapp.ui.OverviewView
                    android:id="@+id/localDeadView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:label="@string/dead"
                    app:labelTextColor="@color/slate_grey_100"
                    app:layout_constraintEnd_toStartOf="@+id/localRecoveredView"
                    app:layout_constraintStart_toEndOf="@+id/localConfirmedView"
                    app:layout_constraintTop_toTopOf="@+id/localConfirmedView"
                    app:valueTextColor="@color/red"
                    tools:value="222.333" />

                <com.marlonmafra.coronavirustrackingapp.ui.OverviewView
                    android:id="@+id/localRecoveredView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:label="@string/recovered"
                    app:labelTextColor="@color/slate_grey_100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/localDeadView"
                    app:layout_constraintTop_toTopOf="@+id/localConfirmedView"
                    app:valueTextColor="@color/green"
                    tools:value="222.333" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.marlonmafra.coronavirustrackingapp.segmentedTab.SegmentedTab
                android:id="@+id/segmentedTab"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabSelectedColor="@color/tab_selected_background_color"
                app:tabUnselectedColor="@color/tab_unselected_background_color"
                app:titleFontPath="@font/rubik_regular" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/segmentedTab" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>